test/upgrade-errors/truffle5.txt
npm install truffle@beta
oz-sample-app git:(master) ✗ truffle5 test
Compiling ./contracts/ECRecovery.sol...
Compiling ./contracts/Migrations.sol...
Compiling ./contracts/TestCrowdsale.sol...
Compiling ./contracts/TestEscrow.sol...
Compiling ./contracts/TestPlatform.sol...
Compiling ./contracts/TestToken.sol...
Compiling openzeppelin-solidity/contracts/access/Roles.sol...
Compiling openzeppelin-solidity/contracts/access/roles/MinterRole.sol...
Compiling openzeppelin-solidity/contracts/access/roles/PauserRole.sol...
Compiling openzeppelin-solidity/contracts/crowdsale/Crowdsale.sol...
Compiling openzeppelin-solidity/contracts/crowdsale/distribution/FinalizableCrowdsale.sol...
Compiling openzeppelin-solidity/contracts/crowdsale/distribution/RefundableCrowdsale.sol...
Compiling openzeppelin-solidity/contracts/crowdsale/emission/MintedCrowdsale.sol...
Compiling openzeppelin-solidity/contracts/crowdsale/validation/CappedCrowdsale.sol...
Compiling openzeppelin-solidity/contracts/crowdsale/validation/TimedCrowdsale.sol...
Compiling openzeppelin-solidity/contracts/lifecycle/Pausable.sol...
Compiling openzeppelin-solidity/contracts/math/SafeMath.sol...
Compiling openzeppelin-solidity/contracts/ownership/Ownable.sol...
Compiling openzeppelin-solidity/contracts/ownership/Secondary.sol...
Compiling openzeppelin-solidity/contracts/payment/ConditionalEscrow.sol...
Compiling openzeppelin-solidity/contracts/payment/Escrow.sol...
Compiling openzeppelin-solidity/contracts/payment/RefundEscrow.sol...
Compiling openzeppelin-solidity/contracts/token/ERC20/ERC20.sol...
Compiling openzeppelin-solidity/contracts/token/ERC20/ERC20Burnable.sol...
Compiling openzeppelin-solidity/contracts/token/ERC20/ERC20Mintable.sol...
Compiling openzeppelin-solidity/contracts/token/ERC20/ERC20Pausable.sol...
Compiling openzeppelin-solidity/contracts/token/ERC20/IERC20.sol...
Compiling openzeppelin-solidity/contracts/token/ERC20/SafeERC20.sol...

Compilation warnings encountered:

openzeppelin-solidity/contracts/crowdsale/Crowdsale.sol:167:5: Warning: Unused function parameter. Remove or comment out the variable name to silence this warning.
    address beneficiary,
    ^-----------------^
,openzeppelin-solidity/contracts/crowdsale/Crowdsale.sol:168:5: Warning: Unused function parameter. Remove or comment out the variable name to silence this warning.
    uint256 weiAmount
    ^---------------^
,openzeppelin-solidity/contracts/crowdsale/Crowdsale.sol:209:5: Warning: Unused function parameter. Remove or comment out the variable name to silence this warning.
    address beneficiary,
    ^-----------------^
,openzeppelin-solidity/contracts/crowdsale/Crowdsale.sol:210:5: Warning: Unused function parameter. Remove or comment out the variable name to silence this warning.
    uint256 weiAmount
    ^---------------^
,openzeppelin-solidity/contracts/payment/RefundEscrow.sol:85:30: Warning: Unused function parameter. Remove or comment out the variable name to silence this warning.
  function withdrawalAllowed(address payee) public view returns (bool) {
                             ^-----------^
,/Users/vamsee/Development/blockchain/pulse/oz-sample-app/contracts/TestCrowdsale.sol:157:5: Warning: Function state mutability can be restricted to pure
    function hasEnded() public view returns (bool) {
    ^ (Relevant source part starts here and spans across multiple lines).
,openzeppelin-solidity/contracts/crowdsale/Crowdsale.sol:151:3: Warning: Function state mutability can be restricted to pure
  function _preValidatePurchase(
  ^ (Relevant source part starts here and spans across multiple lines).
,openzeppelin-solidity/contracts/crowdsale/Crowdsale.sol:166:3: Warning: Function state mutability can be restricted to pure
  function _postValidatePurchase(
  ^ (Relevant source part starts here and spans across multiple lines).
,openzeppelin-solidity/contracts/crowdsale/Crowdsale.sol:208:3: Warning: Function state mutability can be restricted to pure
  function _updatePurchasingState(
  ^ (Relevant source part starts here and spans across multiple lines).
,openzeppelin-solidity/contracts/crowdsale/distribution/FinalizableCrowdsale.sol:45:3: Warning: Function state mutability can be restricted to pure
  function _finalization() internal {
  ^ (Relevant source part starts here and spans across multiple lines).

Error: while migrating TestCrowdsale: Error: [number-to-bn] while converting number null to BN.js instance, error: invalid number value. Value must be an integer, hex string, BN or BigNumber instance. Note, decimals are not supported. Given value: "NaN"
    at /Users/vamsee/Development/blockchain/pulse/oz-sample-app/node_modules/truffle/build/webpack:/packages/truffle-deployer/src/deployment.js:361:1
    at <anonymous>
    at process._tickCallback (internal/process/next_tick.js:188:7)
